--- a/spi_master/.vscode/launch.json
+++ b/spi_master/.vscode/launch.json
@@ -14,10 +14,10 @@
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
             "runToEntryPoint": "main",
-            "executable": "./target/thumbv7m-none-eabi/debug/spi_master",
+            "executable": "./target/thumbv7em-none-eabihf/debug/spi_master",
             /* Run `cargo build --example hello` and uncomment this line to run semi-hosting example */
             //"executable": "./target/thumbv7m-none-eabi/debug/examples/hello",
-            "cpu": "cortex-m3",
+            "cpu": "cortex-m4",
             "machine": "lm3s6965evb",
         },
         {
@@ -32,12 +32,12 @@
             "executable": "./target/thumbv7em-none-eabihf/debug/spi_master",
             /* Run `cargo build --example itm` and uncomment this line to run itm example */
             // "executable": "./target/thumbv7em-none-eabihf/debug/examples/itm",
-            "device": "STM32F303VCT6",
+            "device": "STM32F446RE",
             "configFiles": [
-                "interface/stlink-v2-1.cfg",
-                "target/stm32f3x.cfg"
+                "interface/stlink.cfg",
+                "target/stm32f4x.cfg"
             ],
-            "svdFile": "${workspaceRoot}/.vscode/STM32F303.svd",
+            "svdFile": "${workspaceRoot}/.vscode/STM32F446.svd",
             "swoConfig": {
                 "enabled": true,
                 "cpuFrequency": 8000000,
