--- a/spi_master/Cargo.toml
+++ b/spi_master/Cargo.toml
@@ -1,36 +1,28 @@
 [package]
 authors = ["Derzhavin <derzhavind@bk.ru>"]
-edition = "2018"
-readme = "README.md"
+edition = "2021"
 name = "spi_master"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.6.0"
-cortex-m-rt = "0.6.10"
-cortex-m-semihosting = "0.3.3"
-panic-halt = "0.2.0"
+embedded-hal = "0.2"
+nb = "1"
+cortex-m = "0.7"
+cortex-m-rt = "0.7"
+# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
+panic-halt = "0.2"
 
-# Uncomment for the panic example.
-# panic-itm = "0.4.1"
+[dependencies.stm32f4xx-hal]
+version = "0.20.0"
+features = ["stm32f446", "defmt", ]
 
-# Uncomment for the allocator example.
-# alloc-cortex-m = "0.4.0"
-
-# Uncomment for the device example.
-# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
-# and then use `cargo build --example device` to build it.
-# [dependencies.stm32f3]
-# features = ["stm32f303", "rt"]
-# version = "0.7.1"
-
-# this lets you use `cargo fix`!
-[[bin]]
-name = "spi_master"
-test = false
-bench = false
+# Set the default for dependencies.
+[profile.dev.package."*"]
+opt-level = "s"
 
 [profile.release]
-codegen-units = 1 # better optimizations
-debug = true # symbols are nice and they don't increase the size on Flash
-lto = true # better optimizations
+codegen-units = 1
+incremental = false
+debug = true
+lto = false
+opt-level = "s"
